modify: cacheMemory에 없는 key로 get, remove 시 IndexOutOfBoundsException 문제 해결
get과 remove 연산에서 key의 인덱스 값을 찾기 위해 indexOf() 메소드를 이용해 그 리턴 값을 받음
그런데 여기서 탐색 실패 시 -1이 리턴되고, 이것을 그대로 인덱스 접근에 사용하여서 오류 발생

indexOf() 메소드의 리턴 값이 -1일 때를 검사하는 logic을 추가하여 해결